TravelRequest
Iniciando estrutura da parte de solicitação de viagem + ajustes no uso da API e Swagger, adicionando um redirecionador da home para a pg de doc
